--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="assets/style.css" />
-    </head>
-    <body>
+
+<head>
+    <title> Word Guess Game</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/style.css" />
+</head>
+
+<body>
+    <header id="start-screen">
+        <div class="header">Naruto Quiz</div>
+    </header>
+
+    <main id="main-game">
         <section id="start-block">
-            <p> Instructions...</p>
+            <p> Quiz Game: Test your knowledge to see exactly what you have learned. </p>
             <button id="start-button">Start Quiz</button>
+            <img src="./assets/images/Naruto-BC.jpg" alt="image of naruto shippuden" class="shippuden"/>
         </section>
-        <section id="quiz-block" class="hide">
-            <div id="timer"></div>
+
+        <section  id="quiz-block" class="hide">
             <h1>Question text</h1>
             <div class="answers">
                 <p>Answer 1</p>
                 <p>Answer 2</p>
+            <aside class="timer">Time: 100 </aside>
+            </div>
+           
+            <div>
+                <button class="reset-button">Reset</button>
             </div>
         </section>
         <section id="score-block" class="hide">
-            <p> Socre...</p>
+            <p> Score...</p>
         </section>
         <script src="assets/script.js"></script>
-    </body>
+</body>
+
 </html>
