--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <div class="answers">
                 <p>Answer 1</p>
                 <p>Answer 2</p>
+                <p>Answer 3</p>
+                <p>Answer 4</p>
             <aside class="timer">Time: 100 </aside>
             </div>
            
