--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
         </section>
 
         <section  id="quiz-block" class="hide">
-            <h1>Question text</h1>
+            <h1 id=Question-text></h1>
             <div class="answers">
-                <p>Answer 1</p>
-                <p>Answer 2</p>
-                <p>Answer 3</p>
-                <p>Answer 4</p>
             <aside class="timer">Time: 100 </aside>
             </div>
            
