made changes to java script

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
 
         <section  id="quiz-block" class="hide">
-            <h1 id=Question-text></h1>
+            <h1 id="Question-text"></h1>
             <div class="answers">
             <aside class="timer">Time: 100 </aside>
             </div>
