made manu chnages to js

--- a/index.html
+++ b/index.html
@@ -24,15 +24,27 @@
             <aside class="timer">Time: 100 </aside>
             <p id="feedback"> </p>
             <div class="answers">
+            <div id="result"></div>
             </div>
-           
+    
+        </section>
+        <section id="highscore-block" class="hide">
+            <h1> Score...</h1>
+            <ol id="scorelist"></ol>
+
+        </section>
+        <div id="Finished" class="hide">
+
+            <h1 id="finalscore"></h1>
+            <input type="text" id="initials"></input> 
+
+            <button id="submit-button"> Submit Score</button>
             <div>
-                <button class="reset-button">Reset</button>
+                <button class="reset-button " class="hide">Reset</button>
             </div>
-        </section>
-        <section id="score-block" class="hide">
-            <p> Score...</p>
-        </section>
+
+
+        </div>
         <script src="assets/script.js"></script>
 </body>
 
